--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,13 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/s3-request-presigner": "^3.879.0",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "aws-sdk": "^2.1692.0",
-    "fastify": "^5.5.0"
+    "dotenv": "^17.2.1",
+    "fastify": "^5.5.0",
+    "fastify-type-provider-zod": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
