--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,14 @@ services:
     image: iot-firmware-update-backend:local
     ports:
       - "3000:3000"
+    depends_on:
+      - localstack 
     environment:
       - NODE_ENV=development
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health || exit 1"]
       interval: 5s
@@ -23,3 +29,18 @@ services:
       - backend
     environment:
       - BACKEND_URL=http://backend:3000
+
+  localstack:
+    image: localstack/localstack:latest
+    environment:
+      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+      - SERVICES=s3
+    ports:
+      - "4566:4566"
+    volumes:
+      - localstack-data:/tmp/localstack
+
+volumes:
+  localstack-data:
